--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    implementation "androidx.media:media:1.2.0"
+    implementation 'com.android.support:support-v4:+'
 }
