--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,22 @@
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/media"
         android:label="@string/app_name"
+        android:name=".App"
         android:roundIcon="@drawable/media"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoMediaPlayer">
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:noHistory="true"
+            android:launchMode="singleTop"
             android:label="@string/app_name"
             android:theme="@style/Theme.DemoMediaPlayer.NoActionBar">
             <intent-filter>
