--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
