--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/media"
         android:label="@string/app_name"
-        android:name=".App"
+        android:name=".common.App"
         android:roundIcon="@drawable/media"
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoMediaPlayer">
